--- a/cs_con_net6/cs_con_net6.csproj
+++ b/cs_con_net6/cs_con_net6.csproj
@@ -2,13 +2,17 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.21.6" />
+        <PackageReference Include="Google.Protobuf" Version="3.21.6"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MyConnector\MyConnector\MyConnector.csproj"/>
     </ItemGroup>
 
 </Project>
