--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
   "name": "C# (.NET)",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  "image": "mcr.microsoft.com/dotnet/aspnet",
+  "image": "mcr.microsoft.com/dotnet/sdk",
 
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
